python/testData/highlighting/typeParameterListBefore312.py
class <info descr="PY.CLASS_DEFINITION">Class</info><error descr="Python version 3.11 does not support this syntax">[T]</error>:
    def <info descr="PY.FUNC_DEFINITION">foo</info><error descr="Python version 3.11 does not support this syntax">[U]</error>(<info descr="PY.SELF_PARAMETER">x</info>: <info descr="PY.ANNOTATION">U</info>):
        pass